# internal/web/tasks/api.gen.go
@@ -8,6 +8,7 @@ import (
 	"encoding/json"
 	"fmt"
 	"net/http"
+	"time"
 
 	"github.com/labstack/echo/v4"
 	"github.com/oapi-codegen/runtime"
@@ -16,9 +17,18 @@ import (
 
 // Task defines model for Task.
 type Task struct {
-	Id     *uint   `json:"id,omitempty"`
-	IsDone *bool   `json:"is_done,omitempty"`
-	Task   *string `json:"task,omitempty"`
+	// CreatedAt Timestamp when the task was created
+	CreatedAt *time.Time `json:"created_at,omitempty"`
+
+	// DeletedAt Timestamp when the task was deleted (nullable)
+	DeletedAt *time.Time `json:"deleted_at"`
+	Id        *uint      `json:"id,omitempty"`
+	IsDone    *bool      `json:"is_done,omitempty"`
+	Task      *string    `json:"task,omitempty"`
+
+	// UpdatedAt Timestamp when the task was last updated
+	UpdatedAt *time.Time `json:"updated_at,omitempty"`
+	UserId    *uint      `json:"user_id,omitempty"`
 }
 
 // PostTasksJSONRequestBody defines body for PostTasks for application/json ContentType.
@@ -41,6 +51,9 @@ type ServerInterface interface {
 	// Update a task by ID
 	// (PATCH /tasks/{taskId})
 	PatchTasksTaskId(ctx echo.Context, taskId uint) error
+	// Get tasks by user ID
+	// (GET /users/{userId}/tasks)
+	GetUsersUserIdTasks(ctx echo.Context, userId uint) error
 }
 
 // ServerInterfaceWrapper converts echo contexts to parameters.
@@ -98,6 +111,22 @@ func (w *ServerInterfaceWrapper) PatchTasksTaskId(ctx echo.Context) error {
 	return err
 }
 
+// GetUsersUserIdTasks converts echo context to params.
+func (w *ServerInterfaceWrapper) GetUsersUserIdTasks(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "userId" -------------
+	var userId uint
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "userId", runtime.ParamLocationPath, ctx.Param("userId"), &userId)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter userId: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.GetUsersUserIdTasks(ctx, userId)
+	return err
+}
+
 // This is a simple interface which specifies echo.Route addition functions which
 // are present on both echo.Echo and echo.Group, since we want to allow using
 // either of them for path registration
@@ -130,6 +159,7 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 	router.POST(baseURL+"/tasks", wrapper.PostTasks)
 	router.DELETE(baseURL+"/tasks/:taskId", wrapper.DeleteTasksTaskId)
 	router.PATCH(baseURL+"/tasks/:taskId", wrapper.PatchTasksTaskId)
+	router.GET(baseURL+"/users/:userId/tasks", wrapper.GetUsersUserIdTasks)
 
 }
 
@@ -216,6 +246,23 @@ func (response PatchTasksTaskId404Response) VisitPatchTasksTaskIdResponse(w http
 	return nil
 }
 
+type GetUsersUserIdTasksRequestObject struct {
+	UserId uint `json:"userId"`
+}
+
+type GetUsersUserIdTasksResponseObject interface {
+	VisitGetUsersUserIdTasksResponse(w http.ResponseWriter) error
+}
+
+type GetUsersUserIdTasks200JSONResponse []Task
+
+func (response GetUsersUserIdTasks200JSONResponse) VisitGetUsersUserIdTasksResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(200)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
 // StrictServerInterface represents all server handlers.
 type StrictServerInterface interface {
 	// Get all tasks
@@ -230,6 +277,9 @@ type StrictServerInterface interface {
 	// Update a task by ID
 	// (PATCH /tasks/{taskId})
 	PatchTasksTaskId(ctx context.Context, request PatchTasksTaskIdRequestObject) (PatchTasksTaskIdResponseObject, error)
+	// Get tasks by user ID
+	// (GET /users/{userId}/tasks)
+	GetUsersUserIdTasks(ctx context.Context, request GetUsersUserIdTasksRequestObject) (GetUsersUserIdTasksResponseObject, error)
 }
 
 type StrictHandlerFunc = strictecho.StrictEchoHandlerFunc
@@ -346,6 +396,31 @@ func (sh *strictHandler) PatchTasksTaskId(ctx echo.Context, taskId uint) error {
 		return err
 	} else if validResponse, ok := response.(PatchTasksTaskIdResponseObject); ok {
 		return validResponse.VisitPatchTasksTaskIdResponse(ctx.Response())
+	} else if response != nil {
+		return fmt.Errorf("unexpected response type: %T", response)
+	}
+	return nil
+}
+
+// GetUsersUserIdTasks operation middleware
+func (sh *strictHandler) GetUsersUserIdTasks(ctx echo.Context, userId uint) error {
+	var request GetUsersUserIdTasksRequestObject
+
+	request.UserId = userId
+
+	handler := func(ctx echo.Context, request interface{}) (interface{}, error) {
+		return sh.ssi.GetUsersUserIdTasks(ctx.Request().Context(), request.(GetUsersUserIdTasksRequestObject))
+	}
+	for _, middleware := range sh.middlewares {
+		handler = middleware(handler, "GetUsersUserIdTasks")
+	}
+
+	response, err := handler(ctx, request)
+
+	if err != nil {
+		return err
+	} else if validResponse, ok := response.(GetUsersUserIdTasksResponseObject); ok {
+		return validResponse.VisitGetUsersUserIdTasksResponse(ctx.Response())
 	} else if response != nil {
 		return fmt.Errorf("unexpected response type: %T", response)
 	}
